--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,11 @@
 #div1{
+  /*color del fondo.*/
    background-color: black;
    width: 1836px;
    height: 800px;
 }
 #div2 {
+  /*dibujo de la plataforma.*/
   background-color: white;
   width: 100px;
   height: 20px;
@@ -12,6 +14,7 @@
   top: 780px;
 }
 #div3{
+  /*dibujo de la pelota.*/
   background-color: red;
   width: 20px;
   height: 20px;
@@ -19,4 +22,10 @@
   left: 920px;
   top: 750px;
   border-radius: 15px;
+}
+.ladrillo{
+  width:80px;
+position:absolute;
+height:40px;
+background-color: green;
 }
